Working jupyter notebook with dynamic user based on notebook namespace instead of default jovyan user

--- a/jupyter-scipy/Dockerfile
+++ b/jupyter-scipy/Dockerfile
@@ -4,3 +4,5 @@ FROM ai.beyond/babylon/notebooks/jupyter-base:latest
 COPY --chown=jovyan:users requirements.txt /tmp/requirements.txt
 RUN python3 -m pip install -r /tmp/requirements.txt --quiet --no-cache-dir \
  && rm -f /tmp/requirements.txt
+
+User root
